	* actorio.cc: Removed double-check on monster death before write.
	* usecode/ucdisasm.cc: Added some more special cases.
	* files/databuf.h: Added clear_error virtual method to DataBuffer classes.
	* docs/u7tech.txt: Full documentation of upcoming changes to *.dat files,
	  based on the original games. Some changes for u7iregXX documentation.

2008-05-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: initialize variables, minor clean-up 

2008-05-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: initialize variables
	* schedule.cc: don't access member variable after being deleted

2008-05-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* objs/objs.cc: Removed fire-vs-ice effect previously introduced.
	* usecode/intrinsics.cc: Fixed powder-keg-as-weapon case of attack_object
	  intrinsic to behave as the original does; incidentaly, this fixes the
	  gwani horn. This is a temporary workaround, until attacks and intrinsics
	  are "properly" fixed to behave like the originals.

2008-05-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* various: some 64-bit and/or gcc 4.1 compilation fixes
	* objs/chunks.cc: delete[] vs delete
	* various: initialize some variables

2008-05-26    <jeff@mini.nerble.net>

	* objs/objs.cc: In SI, fire-damage destroys ice wall and blocks,
	so you can free Gwenno.

2008-05-23    <jeff@mini.nerble.net>

	* shapes/miscinf.cc: Don't infinite loop if animated object has
	been rotated.

	* objs/barge.cc (Barge_object): Changed criteria for gathering
	'barge' objects so flags aren't caught (but the ice-raft still works).

2008-05-03    <jeff@mini.nerble.net>

	* effects.cc (Projectile_effect): Fixed crash involving trap.

2008-04-14    <jeff@mini.nerble.net>

	* objs/chunks.cc (Chunk_cache): The 'blocking' detection now
	handles lifts >= 15, and should save a bit of memory for chunks
	with lifts < 8.

	* objs/citerate.h (public): Fixed bug when size is 1x1.
